force-app/main/default/objects/Order__c/fields/Approval_Stage_Controller__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage_Controller__c</fullName>
    <label>Approval Stage Controller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>