force-app/main/default/objects/Order__c/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <label>Bill to Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>