force-app/main/default/objects/Order__c/fields/Current_PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_PO_Balance__c</fullName>
    <label>Current PO Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>