force-app/main/default/objects/Order__c/fields/Customer_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales Order</value>
        </filterItems>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>startsWith</operation>
            <valueField>Order__c.Customer_Purchase_Order__r.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Vendor Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>