force-app/main/default/objects/Order__c/fields/CustomerProjectAmount__c.field-meta.xml
<CustomField>
    <fullName>CustomerProjectAmount__c</fullName>
    <description>use for approval process, going from order to customer record type of Project object</description>
    <formula>Customer_Purchase_Order__r.Project__r.Total_Sum_of_Vendor_Projects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerProjectAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>