force-app/main/default/objects/Order__c/fields/Email_to_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Email_to_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is to track if release email is sent to the vendor or not</inlineHelpText>
    <label>Email to Vendor</label>
    <type>Checkbox</type>
</CustomField>