force-app/main/default/objects/Order__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <description>gross profit</description>
    <label>GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>