force-app/main/default/objects/Order__c/fields/PO_After_Utilised__c.field-meta.xml
<CustomField>
    <fullName>PO_After_Utilised__c</fullName>
    <description>This will calculate the PO amount in percent after utlisation.</description>
    <formula>PO_Balance__c/Current_PO_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO After Utilised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>