force-app/main/default/objects/Order__c/fields/PO_Amount_Balance__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount_Balance__c</fullName>
    <formula>PO_Amount__c - PO_Amount_Utilised__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Amount Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>