force-app/main/default/objects/Order__c/fields/PO_Amount_Utilised__c.field-meta.xml
<CustomField>
    <fullName>PO_Amount_Utilised__c</fullName>
    <label>PO Amount Utilised</label>
    <summarizedField>Invoice__c.Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.Stage__c</field>
        <operation>equals</operation>
        <value>Submitted, On Hold, Sent to Client, Accepted, Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>