force-app/main/default/objects/Order__c/fields/PO_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>PO_Approval_Status__c</fullName>
    <description>User for Approval purpose</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval_Stage_Controller__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent to SDM</fullName>
            </value>
            <value>
                <fullName>Sent to Area Delivery Manager</fullName>
            </value>
            <value>
                <fullName>Sent to Regional Service Delivery Head</fullName>
            </value>
            <value>
                <fullName>Sent to Project Manager</fullName>
            </value>
            <value>
                <fullName>Sent to Project Management Head</fullName>
            </value>
            <value>
                <fullName>Sent to Global Delivery Director</fullName>
            </value>
            <value>
                <fullName>Sent To Finance Head</fullName>
            </value>
            <value>
                <fullName>Sent to COO</fullName>
            </value>
            <value>
                <fullName>Sent to Finance Executive</fullName>
            </value>
            <value>
                <fullName>Sent to Assistant Finance Manager</fullName>
            </value>
            <value>
                <fullName>Sent to Finance Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>