force-app/main/default/objects/Order__c/fields/PO_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Start_Date__c</fullName>
    <label>PO Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>