force-app/main/default/objects/Order__c/fields/Ready_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The project Owner will mark this field if a task is assigned to him and untill PO Status = Released this field cannot be marked

Remarks: Project Owner can be of profile(Finance, Project Management, Service Delivery,  Admin)</description>
    <label>Ready to Close</label>
    <type>Checkbox</type>
</CustomField>