force-app/main/default/objects/Order__c/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <label>Ship to Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>