force-app/main/default/objects/Order__c/fields/Tax_Included__c.field-meta.xml
<CustomField>
    <fullName>Tax_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Included</label>
    <type>Checkbox</type>
</CustomField>