force-app/main/default/objects/Order__c/fields/Total_Billed_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Value__c</fullName>
    <description>This field is used on Project level.(there is a master detail relationship between invoice and order, so, it will be a cascade rollup, rollup total amount from invoice on order)</description>
    <label>Total Billed Value</label>
    <summarizedField>Invoice__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Invoice__c.Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>