force-app/main/default/objects/Order__c/fields/VendorAccountAmount__c.field-meta.xml
<CustomField>
    <fullName>VendorAccountAmount__c</fullName>
    <description>Value will automatically get updated from Field Name &quot;Total Amount of All Vendor Projects&quot; of Account object at Vendor Record Page. Previously used this field in the approval process and now as approval process criteria updated not using it in the approval process.

Remarks: Don&apos;t add this field on the page layout. As there is no need of this field.</description>
    <formula>Customer__r.Total_Amount_of_Vendor_Projects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount of All Vendor Projects associated with a Vendor Account</inlineHelpText>
    <label>Total Vendor Projects Amount on a Vendor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>