force-app/main/default/objects/Order__c/recordTypes/Indirect_Purchase_Order.recordType-meta.xml
<RecordType>
    <fullName>Indirect_Purchase_Order</fullName>
    <active>true</active>
    <label>Indirect Purchase Order</label>
</RecordType>