force-app/main/default/objects/Order__c/validationRules/Check_Customer_Purchase_Order_is_Relevan.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Customer_Purchase_Order_is_Relevan</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Purchase_Order__r.Project__c !=  Project__r.Customer_Project__c</errorConditionFormula>
    <errorMessage>Please choose Order corresponding to the Customer Project selected</errorMessage>
</ValidationRule>