force-app/main/default/objects/Order__c/validationRules/PO_Amount_should_not_be_negative_value.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_Amount_should_not_be_negative_value</fullName>
    <active>true</active>
    <description>PO Amount should not be negative value</description>
    <errorConditionFormula>PO_Amount__c &lt;0</errorConditionFormula>
    <errorDisplayField>PO_Amount__c</errorDisplayField>
    <errorMessage>PO Amount can not be  a negative value.</errorMessage>
</ValidationRule>