force-app/main/default/objects/Order__c/validationRules/PO_End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_End_Date_Validation</fullName>
    <active>true</active>
    <description>PO End Date should be either same as Project end date or less than Project end date</description>
    <errorConditionFormula>PO_End_Date__c &gt; Project__r.Project_End_Date__c</errorConditionFormula>
    <errorMessage>PO End Date should be either same as Project end date or less than Project end date</errorMessage>
</ValidationRule>