force-app/main/default/objects/Order__c/validationRules/PO_start_less_than_project_start.validationRule-meta.xml
<ValidationRule>
    <fullName>PO_start_less_than_project_start</fullName>
    <active>true</active>
    <errorConditionFormula>Project__r.Project_Start_Date__c &gt;  PO_Start_Date__c</errorConditionFormula>
    <errorMessage>PO Start Date should be greater than Project start date</errorMessage>
</ValidationRule>