force-app/main/default/objects/Order__c/validationRules/PODate.validationRule-meta.xml
<ValidationRule>
    <fullName>PODate</fullName>
    <active>true</active>
    <description>PO start date is less than PO end date.</description>
    <errorConditionFormula>NOT( PO_Start_Date__c &lt;  PO_End_Date__c )</errorConditionFormula>
    <errorMessage>PO start date should be less than PO end date.</errorMessage>
</ValidationRule>