force-app/main/default/objects/Order__c/validationRules/Vendor_PO_amount_cannot_be_greater.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_PO_amount_cannot_be_greater</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Purchase_Order__r.PO_Amount__c &lt;  PO_Amount__c</errorConditionFormula>
    <errorMessage>Vendor PO Amount cannot be greater than customer PO Amount</errorMessage>
</ValidationRule>