force-app/main/default/objects/Order__c/validationRules/Vendor_PO_should_be_within_Customer_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>Vendor_PO_should_be_within_Customer_PO</fullName>
    <active>true</active>
    <errorConditionFormula>Customer_Purchase_Order__r.PO_Start_Date__c &gt;  PO_Start_Date__c ||  Customer_Purchase_Order__r.PO_End_Date__c &lt;  PO_End_Date__c</errorConditionFormula>
    <errorMessage>PO Dates should be within Start and End date of Customer PO</errorMessage>
</ValidationRule>